@@ -1,3 +1,7 @@
+2011-02-07 Javier Lanz <javier.lanz@artica.es>
+	* godmode/gis_maps/index.php: Only display Default column to an admin
+	user
+
 2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	Merged bugfix from trunk
